# HMS-Dilshan

./: .env.example  .env.local.example  .gitignore  .stylelintrc.json  CICD_README.md  Dockerfile  LOCAL_DEV.txt  add_peer_columns.php  add_stock_to_branches.php  analyze_har.py  assign_stock_to_branch.php  aws_migration.sql  backend_logs.txt  cleanup_cancelled.php  cleanup_stale_bookings.php  composer.json  docker-compose.ec2.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  fix-nginx-root.sh  fix_pharmacist.php  key.pem  local-down.cmd  local-reset.cmd  local-up.cmd  manual-frontend-rebuild.sh  manual_cleanup.php  manual_confirm_payment.php  migrate-api-endpoints.cjs  migrate.bat  modern_styling_instructions.txt  nginx.conf.production  package-lock.json  package.json  plan.txt  pr_diff_appointments.txt  pr_diff_main.txt  prompt.txt  req.txt  (+16 more)
backend/: .dockerignore  Dockerfile  check_env.py  comprehensive_seed.py  debug_check_appointments.py  debug_query.py  debug_sessions.py  debug_super_admin_filter_data.py  ecosystem.config.cjs  error_detail.json  migration_error.txt  pyproject.toml  repro_doctor.py  repro_output.txt  seed.py  test_branches.py  test_login.py  test_receptionist.py  test_user_flow.py  verify_refactor.py  wait-for-db.sh
backend/alembic/: env.py
backend/alembic/versions/: 01a2b3c4d5e6_add_pharmacy_inventory_tables.py  02b3c4d5e6f7_add_notification_table.py  04d5e6f7a8b9_add_pos_tables.py  (+40 more)
backend/app/: main.py
backend/scripts/: find_alembic_heads.py  fix_missing_session.py  reproduce_schedule_issue.py  verify_session.py
(+2223 files in other folders)
